<resources>
    <string name="app_name">TraiNook</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer -->
    <string name="nav_all_forums">All forums</string>
    <string name="nav_filter_category_forums">Search by categories</string>
    <string name="nav_trending_forums">Trending forums</string>
    <string name="nav_random_forum">Random forum</string>

    <string name="nav_group2">Other options</string>
    <string name="nav_share">Share</string>
    <string name="nav_about">About</string>

    <!-- About activity -->
    <string name="version">Version</string>
    <string name="description_about">Trainook is a project created by
        <b><a href="https://es.linkedin.com/in/josep-de-cid-rodríguez-6788b4103/en">Josep de Cid</a></b>,
        <b><a href="#">Franc Auxach</a></b>,
        <b><a href="https://www.linkedin.com/in/demian-turcan-583b26125/en">Demian Turcan</a></b> and
        <b><a href="https://www.linkedin.com/in/manel-gavald%C3%A0-andreu-410b72117/en">Manel Gavaldà</a></b>
        to FGCHackApp2016.</string>

    <!-- -->
    <string name="title_activity_forum">ForumActivity</string>

</resources>
