<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_forums"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_all_forums" />
        <item
            android:id="@+id/nav_search_categories"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/nav_filter_category_forums" />
        <item
            android:id="@+id/nav_trending_forums"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/nav_trending_forums" />
        <item
            android:id="@+id/nav_random_forum"
            android:icon="@drawable/ic_assistant_photo_black_24dp"
            android:title="@string/nav_random_forum" />
    </group>

    <item android:title="@string/nav_group2">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
